--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content=""/>
     <meta name="description" content="?">
 
-    <title>ddd</title>
+    <title>Save the planet with us!</title>
 
     <!-- icon -->
     <link rel="shortcut icon" href="assets/img/icon.png">
@@ -70,9 +70,9 @@
 
         <div class="col-lg-6 content">
 
-          <h1 id = "save-tog">להציל את כדור הארץ יחד</h1>
+          <h1 id = "save-tog">   !להציל את כדור הארץ יחד</h1>
 
-          <img src="assets/img/help.png" alt="I need YOUR help!">
+          <img id = "save-img" src="assets/img/help.png" alt="I need YOUR help!">
 
           <div class="margin-3"></div>
 
