--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
           <div id="btn">
             
-            <a href="https://www.greenpeace.org/israel/" id = "green">אתר של גרינפיס ישראל</a>
+            <a href="https://www.greenpeace.org/israel/" target="_blank" id = "green">אתר של גרינפיס ישראל</a>
 
           </div>
 
@@ -106,7 +106,7 @@
 
           <div class="col-lg-4">
 
-            <p id = "footer-txt" class = "text-center">contact email: zasrem@gmail.com</p>
+            <p id = "footer-txt" class = "text-center">contact email: <a href="mailto:zasrem@gmail.com">zasrem@gmail.com</a></p>
 
           </div>
 
