--- a/index.html
+++ b/index.html
@@ -54,10 +54,57 @@
 
           <img src="assets/img/warming.webp" alt="global warming" title = "global warming" id = "warm-img">
 
-          <h2>אתה יכול לדעת שכדור הארץ שלנו לא במצב הכי טוב. אבל יש דרכים לשנות את זה</h2>
+          <h3> :דבר שני זה שאנחנו זורקים טונות של פלסתיק לאוקיינוס וזה גורם לשתי דברים  </h3>
 
-          <h2> יש הרבה דברים שמשפיעים לכדור הארץ ךא טוב, אבל אנחנו רוצים לדבר אל דבר אחד  <b>פלסטיק</b></h2>
+          <p><b>מתלחלח את האוקיינוס</b></p>
 
+          <p>יש היום טונות של פלסתיק באוקיינוס וזה מונע מאיתנו מים טהורים שבזמנו מוכריך אותנו לבזבז יותר אנרגיה לניקוי המים וגם מקלקל את בית הגידול של הרבה בעלי חיים</p>
+
+          <img src="assets/img/plasticocean.jpg" alt="plastic in the ocean" title = "plastic in the ocean" id = "plastic2-img">
+
+          <br> <br>
+
+          <p><b>מקרי מוות רבים של בעלי חיים</b></p>
+
+          <p>כמו שכבר אמרנו יש עשרות או אפילו מאות טונות של פלסתיק באוקינוס. הפלאסתיק הזא לא רק מתלכלך את בית הגידוך של בעליי חיים, הוא גם הורג אותם. בעלי חיים נתקאים בכל פלסתיק הזה וגם אוכלים אותו ובגלל זה מתים.</p>
+
+          <img src="assets/img/turtleplastic.webp" alt="turtle with plastic" title = "turtle with plastic" id = "plastic3-img">
+
+          <h2>!<b>אתה</b> יכול לעזור לנו להציל את כדור הארצ שלנו</h2>
+
+          <p>אם אנחנו נשתמשש בפלסתיק פחות אז אנחנו מאוד נעזור לכדור הארצ שלנו</p>
+
+          <h2>:אתה יכול למשל</h2>
+
+          <p><b>פחות להשתמש בסקיות חד פעמיות</b></p>
+
+          <p>אחוז גדול מכל הפלסתיק זה סקיות ניילון. אם אתה תיקח פחות סקיות בחנות ופחות תשתמש בהם אתה תעזור לכדור הארצ הרבה. ולחנות אפשר לקנות תיק או שופר. תודה</p>
+
+          <br> <br>
+
+          <p><b>מזון</b></p>
+
+          <p>כשאתה תקנה אוכל פעם הבא תסים לב באיזה אריזה האוכל באה, אם זה סקית נילון אז אולי תחפס את זה באריזה אחרת? תודה</p>
+
+          <br> <br>
+
+          <p><b>אל תשתמש בדברים חד פעמים</b></p>
+
+          <p>כאיקרון בכלים חד פעמים. מזלגות, כפיות, צלחות, סקינים וכשיות. <b>אל תהיה אצלן! תשתופ כלם אחרך</b></p>
+
+          <br> <br>
+
+          <p>אנו מקווים שאתה תחשוב אל כמות הפלסתיק שאנחנו משתמשים ואל התנצלות של כדור הארץ. מקווים שתאזור לנו</p>
+
+          <h2 id = "toda-txt">!תודה שמצאתה זמן לקראו את זה</h2>
+
+          <p id = "kish-txt">:קישורים בישבילך</p>
+
+          <button onclick="location.href='https://www.greenpeace.org/israel'" class = "btn" id = "b1" type="button">גרינפיס ישראל</button>
+
+          <button onclick="location.href='https://www.ynet.co.il/articles/0,7340,L-5604253,00.html'" class = "btn" id = "b2" type="button">פוסת אל הנושה</button>
+
+          <button onclick="location.href='https://www.ecowave.org.il/'" class = "btn" id = "b3" type="button">ecovawe.org</button>
 
           <div class="margin-25"></div>
           
